--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasWishlist.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasWishlist.cshtml
@@ -88,7 +88,7 @@
                         </div>
                         <div class="col">
                             <span class="price unit-price">
-                                @item.UnitPrice
+                                @item.Price.UnitPrice
                             </span>
                         </div>
 
