Minor fix for payment selection page

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_checkout.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_checkout.scss
@@ -275,7 +275,7 @@
     }
 
     .payment-method-item {
-        &:hover {
+        &:hover:not(.active) {
             cursor: pointer;
         }
 
