Closes #763 Find a way to display admin edit button for public entities on touch displays

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
@@ -185,6 +185,16 @@
     top: 0;
     background-color: rgba(#fff, 0.5);
     z-index: 1;
+
+    .touchevents & {
+        display: inline-block;
+        background-color: var(--btn-hover-bg);
+        border-color: var(--btn-hover-border-color);
+
+        & > span {
+            display: none;
+        }
+    }
 }
 
 .news-item-page:hover .btn-admin-edit,
