﻿Closes #859 MyAccount menu header: show "customer since" and reward points (as badge) instead of email

--- a/src/Smartstore.Web/Views/Shared/Components/MyAccountHeader/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/MyAccountHeader/Default.cshtml
@@ -7,7 +7,19 @@
         <partial name="Customer.Avatar" model="Model.Avatar" />
     </div>
     <div class="col align-self-center text-truncate pr-4 pr-md-1">
-        <div class="my-account-username fwm text-truncate">@Model.CustomerName</div>
-        <div class="my-account-email text-muted small text-truncate">@Model.CustomerEmail</div>
+        <div class="my-account-username fwm">
+            <div class="row no-gutters">
+                <div class="col text-truncate pr-1">@Model.CustomerName</div>
+                <div sm-if="Model.RewardPoints > 0"
+                        class="col-auto badge badge-pill badge-counter badge-success"
+                        title="@T("ShoppingCart.Totals.RewardPoints", Model.RewardPoints)">
+                    @Model.RewardPoints
+                </div>
+            </div>
+        </div>
+        <div class="my-account-email text-truncate small">
+            <span class="text-muted">@T("Account.CustomerSince")</span>
+            <span>@Model.CustomerSince</span>
+        </div>
     </div>
 </div>
