select2 UI fixes

--- a/src/Smartstore.Web/wwwroot/admin/_admin.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_admin.scss
@@ -1475,7 +1475,7 @@ a.editable {
         }
 
         .select2-selection__clear {
-            margin-left: 3px;
+            margin-inline-start: 3px;
         }
     }
 }
