--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/EditorTemplates/BadgeStyles.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/EditorTemplates/BadgeStyles.cshtml
@@ -30,14 +30,15 @@
 
 <script>
     $(function () {
-        $('#@Html.IdFor(x => x)').select2({
-            templateResult: formatOption
+        $('#@Html.IdFor(x => x)').selectWrapper({
+            templateResult: formatOption,
+            templateSelection: formatOption
         });
 
         function formatOption(option) {
-            var option = $('<span >' + option.text + '</span><span class="badge badge-' + option.text.toLowerCase() + ' float-right">@badgeText</span>');
-
-            return option;
+            let html = $('<span class="select2-option w-100">' + option.text + '<span class="badge badge-' + option.text.toLowerCase() + ' float-right">@badgeText</span></span>');
+            //let html = $('<span class="select2-option"><span class="badge badge-' + option.text.toLowerCase() + '">' + option.text + '</span></span>');
+            return html;
         }
     });
 </script>
