--- a/src/Smartstore.Web/wwwroot/shared/_variables-shared.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_variables-shared.scss
@@ -356,6 +356,7 @@ $fa-free-regular-icons: (
 
 $clr-brand-facebook:            #1778F2 !default;
 $clr-brand-twitter:             #55acee !default;
+$clr-brand-x-twitter:           #000000 !default;
 $clr-brand-github:              #bd2c00 !default;
 $clr-brand-github2:             #ff9933 !default;
 $clr-brand-github3:             #4183c4 !default;
