--- a/src/Smartstore.Web/wwwroot/shared/_buttons.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_buttons.scss
@@ -154,6 +154,10 @@ $btn-wide-padding-x-sm: 1.2rem;
         @include button-variant($clr-brand-twitter, $clr-brand-twitter);
     }
 
+    .btn-brand-x-twitter {
+        @include button-variant($clr-brand-x-twitter, $clr-brand-x-twitter);
+    }
+
     .btn-brand-youtube {
         @include button-variant($clr-brand-youtube, $clr-brand-youtube);
     }
