--- a/src/Smartstore.Web/wwwroot/lib/fa6/css/all.css
+++ b/src/Smartstore.Web/wwwroot/lib/fa6/css/all.css
@@ -14,15 +14,22 @@
 .fa-solid,
 .far,
 .fa-regular,
+.fal,
+.fa-light,
+.fat,
+.fa-thin,
+.fad,
+.fa-duotone,
 .fab,
 .fa-brands {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  display: var(--fa-display, inline-block);
-  font-style: normal;
-  font-variant: normal;
-  line-height: 1;
-  text-rendering: auto; }
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: var(--fa-display, inline-block);
+    font-style: normal;
+    font-variant: normal;
+    line-height: 1;
+    text-rendering: auto;
+}
 
 .fas,
 .fa-classic,
