--- a/src/Smartstore.Web/wwwroot/shared/_alert.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_alert.scss
@@ -89,3 +89,9 @@
 .alert > *:last-child {
 	margin-bottom: 0 !important;
 }
+
+.alert.rounded-0 {
+    &:before {
+        @include border-left-radius(0);
+    }
+}
