--- a/src/Smartstore.Web/Views/Order/Details.cshtml
+++ b/src/Smartstore.Web/Views/Order/Details.cshtml
@@ -300,7 +300,7 @@
                                 </tr>
                                 <tr sm-if="Model.OrderSubTotalDiscount != 0" class="cart-summary-subtotaldiscount cart-summary-pos">
                                     <td class="cart-summary-label">@T("Order.SubTotalDiscount"):</td>
-                                    <td class="cart-summary-value">-@Model.OrderSubTotalDiscount</td>
+                                    <td class="cart-summary-value">@Model.OrderSubTotalDiscount</td>
                                 </tr>
                                 <tr sm-if="Model.IsShippable" class="cart-summary-shipping cart-summary-neg">
                                     <td class="cart-summary-label">@T("Order.Shipping"):</td>
