--- a/src/Smartstore.Web/Views/Shared/Partials/_ClientRes.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/_ClientRes.cshtml
@@ -14,6 +14,8 @@
         "Common.DelKey",
         "Common.EnterKey",
         "Common.EscKey",
+        "Common.DontAskAgain",
+        "Common.DontShowAgain",
         "Products.Longdesc.More",
         "Products.Longdesc.Less",
         "Jquery.Validate.Email",
