--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/EditorTemplates/Stores.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/EditorTemplates/Stores.cshtml
@@ -25,27 +25,20 @@
             return Array.Empty<int>();
         }
     }
-
-    private bool IsNullable
-    {
-        get
-        {
-            return !TryGetMetadata<bool>("nullable", out var nullable) || nullable == true;
-        }
-    }
 }
 
 @{
     var items = StoreContext.GetAllStores().ToSelectListItems(SelectedIds);
     var attributes = new AttributeDictionary().Merge(ConvertUtility.ObjectToDictionary(ViewData["htmlAttributes"] ?? new object()));
+
+    if (!attributes.ContainsKey("data-placeholder"))
+    {
+        attributes["data-placeholder"] = T("Admin.Common.StoresAll").Value;
+    }
 }
 <select asp-for="@Model" 
         asp-items="items" 
         attrs="attributes"
         class="edit-control"
         data-editor="select">
-    @if (IsNullable)
-    {
-        <option value="">@T("Admin.Common.StoresAll")</option>
-    }
 </select>
