--- a/src/Smartstore.Web/wwwroot/admin/theme.scss
+++ b/src/Smartstore.Web/wwwroot/admin/theme.scss
@@ -59,6 +59,7 @@
 @import '../shared/numberinput';
 @import '../shared/pagination';
 @import '../shared/nav';
+@import '../shared/nav-collapsible';
 @import "../shared/modal";
 @import '../shared/dropdown';
 @import "../shared/throbber";
