--- a/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_variables.scss
+++ b/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_variables.scss
@@ -1218,7 +1218,7 @@ $progress-bar-transition:           width .6s ease !default;
 
 // List group
 
-$list-group-color:                  null !default;
+$list-group-color:                  inherit !default;
 $list-group-bg:                     $white !default;
 $list-group-border-color:           rgba($black, .125) !default;
 $list-group-border-width:           $border-width !default;
